--- a/dev/less/primario.less
+++ b/dev/less/primario.less
@@ -81,6 +81,7 @@
 	.center-bg();
     background-attachment: fixed;
 	height: 1578px;
+	background-position: 50% 0px;
 
 	@media(max-width:1200px){
 		height: 1300px;
