--- a/dev/less/secundario.less
+++ b/dev/less/secundario.less
@@ -8,6 +8,8 @@
 	@media (max-width:420px){
 		margin-top: 0px;
 		background: @cor-terciaria;
+		height: auto;
+		padding-bottom: 60px;
 	}
 	.container{
 		.flex-row;
@@ -83,7 +85,7 @@
 		    	order: 2;
 		    }
 			img{
-
+				max-width: 100%;
 			}
 		}
 		.icon{
